--- a/PSP/javafx11/src/main/resources/fxml/pantalla.fxml
+++ b/PSP/javafx11/src/main/resources/fxml/pantalla.fxml
@@ -3,9 +3,11 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.2" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.Pantalla">
    <children>
       <Button layoutX="248.0" layoutY="175.0" mnemonicParsing="false" text="Pantalla" />
+
+      <Button layoutX="448.0" layoutY="175.0" mnemonicParsing="false" text="Pantalla" />
+      <Button layoutX="196.0" layoutY="50.0" mnemonicParsing="false" text="Button" />
    </children>
 </AnchorPane>
