--- a/MOVILES/primeraApp/app/src/main/res/layout/activity_main.xml
+++ b/MOVILES/primeraApp/app/src/main/res/layout/activity_main.xml
@@ -8,28 +8,39 @@
     tools:context=".MainActivity">
 
 
+    <EditText
+
+        android:id="@+id/et"
+        android:layout_width="200dp"
+        android:layout_height="100dp"
+        android:hint="nombre"
+
+        app:layout_constraintBottom_toTopOf="@id/text"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.2"
+        />
+
     <TextView
         android:id="@+id/text"
-        android:layout_width="409dp"
+        android:layout_width="109dp"
         android:layout_height="wrap_content"
         android:text="Hello World!"
         app:layout_constraintBottom_toTopOf="@id/boton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.5"
-        app:layout_constraintVertical_chainStyle="spread" />
+        app:layout_constraintTop_toBottomOf="@id/et"
+        />
 
     <Button
         android:id="@+id/boton"
-        android:layout_width="409dp"
+        android:layout_width="109dp"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/text"
-        app:layout_constraintVertical_bias="0.3"
-        app:layout_constraintVertical_chainStyle="packed" />
+        app:layout_constraintTop_toBottomOf="@id/text" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
