--- a/PSP/CDI_Lombok/src/main/resources/fxml/pantalla2.fxml
+++ b/PSP/CDI_Lombok/src/main/resources/fxml/pantalla2.fxml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.2" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.Pantalla2">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.Pantalla2">
    <children>
       <Button fx:id="boton" layoutX="248.0" layoutY="175.0" mnemonicParsing="false" text="Button" />
+      <ListView fx:id="lvPantalla2" layoutX="365.0" layoutY="88.0" prefHeight="200.0" prefWidth="200.0" />
 
    </children>
 </AnchorPane>
