--- a/MOVILES/recyclerview/app/src/main/res/layout/activity_main.xml
+++ b/MOVILES/recyclerview/app/src/main/res/layout/activity_main.xml
@@ -26,8 +26,20 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="CAMBIAR PANTALLA"
-        app:layout_constraintTop_toBottomOf="@id/animationView"
+        app:layout_constraintTop_toBottomOf="@id/editTextTextPersonName"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <EditText
+        android:id="@+id/editTextTextPersonName"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:text="Name"
+        app:layout_constraintTop_toBottomOf="@id/animationView"
+        app:layout_constraintBottom_toTopOf="@id/button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
