--- a/PSP/apiFootball/src/main/resources/fxml/principalmio.fxml
+++ b/PSP/apiFootball/src/main/resources/fxml/principalmio.fxml
@@ -3,7 +3,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<BorderPane fx:id="pantallaPrincipal" prefHeight="800.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.controllers.PrincipalController">
+<BorderPane fx:id="pantallaPrincipal" prefHeight="800.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.controllers.PrincipalControllerMio">
    <top>
       <MenuBar fx:id="menuTienda" BorderPane.alignment="CENTER">
         <menus>
