--- a/MOVILES/Navigation/app/src/main/res/navigation/my_nav.xml
+++ b/MOVILES/Navigation/app/src/main/res/navigation/my_nav.xml
@@ -10,4 +10,9 @@
         android:name="com.example.navigation.BlankFragment"
         android:label="fragment_blank"
         tools:layout="@layout/fragment_blank" />
+    <fragment
+        android:id="@+id/blankFragment2"
+        android:name="com.example.navigation.BlankFragment2"
+        android:label="blank_fragment"
+        tools:layout="@layout/blank_fragment" />
 </navigation>
