--- a/MOVILES/HiltMenu/app/src/main/res/menu/menu.xml
+++ b/MOVILES/HiltMenu/app/src/main/res/menu/menu.xml
@@ -12,11 +12,11 @@
         android:id="@+id/action_action2"
         android:icon="@drawable/ic_action_name"
         android:title="action2"
-        app:showAsAction="always"
-        app:actionViewClass="android.widget.SearchView" />
+        app:showAsAction="withText"
+        app:actionViewClass="androidx.appcompat.widget.SearchView" />
     <item
         android:id="@+id/action_action3"
         android:icon="@drawable/ic_action_name"
         android:title="action3"
-        app:showAsAction="always"/>
+        app:showAsAction="never"/>
 </menu>
