--- a/MOVILES/recyclerviewEnhanced/app/src/main/res/layout/activity_main.xml
+++ b/MOVILES/recyclerviewEnhanced/app/src/main/res/layout/activity_main.xml
@@ -17,8 +17,8 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvPersonas"
-        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
-        app:spanCount="2"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_marginTop="1dp"
