--- a/MOVILES/recyclerviewEnhanced/app/src/main/res/layout/view_persona.xml
+++ b/MOVILES/recyclerviewEnhanced/app/src/main/res/layout/view_persona.xml
@@ -31,11 +31,12 @@
         android:id="@+id/selected"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="CheckBox"
-        android:visibility="gone"
-        tools:layout_editor_absoluteX="150dp"
+        android:text=""
+        android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@id/tvId"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintEnd_toStartOf="@id/tvId"
+        app:layout_constraintHorizontal_bias="0.353"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.842" />
 </androidx.constraintlayout.widget.ConstraintLayout>
