--- a/MOVILES/recyclerviewEnhanced/app/src/main/res/layout/activity_main.xml
+++ b/MOVILES/recyclerviewEnhanced/app/src/main/res/layout/activity_main.xml
@@ -6,6 +6,36 @@
     android:layout_height="match_parent"
     tools:context=".main.MainActivity">
 
+    <androidx.coordinatorlayout.widget.CoordinatorLayout
+
+        android:id="@+id/coordinatorLayout"
+        android:layout_width="match_parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_height="0dp">
+
+        <com.google.android.material.appbar.AppBarLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:liftOnScroll="true"
+            >
+
+            <com.google.android.material.appbar.MaterialToolbar
+                android:id="@+id/topAppBar"
+                style="@style/Widget.MaterialComponents.Toolbar.Primary"
+                android:layout_width="match_parent"
+                android:layout_height="?attr/actionBarSize"
+                app:menu="@menu/menu_app_bar"
+                app:navigationIcon="@drawable/ic_launcher_foreground"
+                app:title="TITULO" />
+
+        </com.google.android.material.appbar.AppBarLayout>
+
+
+    </androidx.coordinatorlayout.widget.CoordinatorLayout>
+
+
+
+
     <Button
         android:id="@+id/button"
         android:layout_width="wrap_content"
@@ -13,18 +43,18 @@
         android:text="Button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@id/coordinatorLayout" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvPersonas"
-        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-
         android:layout_width="match_parent"
+
         android:layout_height="0dp"
-        android:layout_marginTop="1dp"
-        android:layout_marginBottom="10dp"
-        android:layout_marginEnd="10dp"
         android:layout_marginStart="10dp"
+        android:layout_marginTop="1dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginBottom="10dp"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
