--- a/MOVILES/Navigation/app/src/main/res/layout/blank_fragment.xml
+++ b/MOVILES/Navigation/app/src/main/res/layout/blank_fragment.xml
@@ -6,6 +6,7 @@
     tools:context=".BlankFragment2">
 
     <TextView
+        android:id="@+id/texto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:text="Hello" />
