--- a/MOVILES/Navigation/app/src/main/res/navigation/my_nav.xml
+++ b/MOVILES/Navigation/app/src/main/res/navigation/my_nav.xml
@@ -9,10 +9,26 @@
         android:id="@+id/blankFragment"
         android:name="com.example.navigation.BlankFragment"
         android:label="fragment_blank"
-        tools:layout="@layout/fragment_blank" />
+        tools:layout="@layout/fragment_blank" >
+        <action
+            android:id="@+id/action_blankFragment_to_blankFragment22"
+            app:destination="@id/blankFragment2"
+
+            app:enterAnim="@android:anim/fade_in"
+            app:exitAnim="@android:anim/fade_out" />
+    </fragment>
     <fragment
         android:id="@+id/blankFragment2"
         android:name="com.example.navigation.BlankFragment2"
         android:label="blank_fragment"
-        tools:layout="@layout/blank_fragment" />
+        tools:layout="@layout/blank_fragment">
+        <argument
+            android:name="persona"
+            android:defaultValue="@null"
+            app:argType="com.example.navigation.Persona"
+            app:nullable="true" />
+        <deepLink
+            android:id="@+id/deepLink"
+            app:uri="myapp://navigaton/bk2" />
+    </fragment>
 </navigation>
