--- a/MOVILES/Navigation/app/src/main/res/navigation/my_nav.xml
+++ b/MOVILES/Navigation/app/src/main/res/navigation/my_nav.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/my_nav"
-    app:startDestination="@id/blankFragment2">
+    app:startDestination="@id/blankFragment">
 
     <fragment
         android:id="@+id/blankFragment"
@@ -46,5 +46,9 @@
         android:id="@+id/blankFragment3"
         android:name="com.example.navigation.BlankFragment3"
         android:label="blank fragment 3"
-        tools:layout="@layout/fragment_blank2" />
+        tools:layout="@layout/fragment_blank2" >
+        <action
+            android:id="@+id/action_blankFragment3_to_blankFragment2"
+            app:destination="@id/blankFragment2" />
+    </fragment>
 </navigation>
